// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Renderers/Date Renderer Date Range 1`] = `
<time
  dateTime={"2020-06-10T00:00:00.000Z"}
  title="2020-06-10T00:00:00+00:00"
>
  9 days
</time>
`;

exports[`Storyshots Renderers/Date Renderer Date Renderer 1`] = `
<time
  dateTime={"2020-06-01T00:00:00.000Z"}
  title="2020-06-01T00:00:00+00:00"
>
  June 1, 2020
</time>
`;

exports[`Storyshots Renderers/Date Renderer Invalid Date String 1`] = `
<span>
   - 
</span>
`;

exports[`Storyshots Renderers/Date Renderer Relative 1`] = `
<time
  dateTime={"2020-06-01T00:00:00.000Z"}
  title="2020-06-01T00:00:00+00:00"
>
  9 days ago
</time>
`;

exports[`Storyshots Renderers/Date Renderer Relative Negative 1`] = `
<time
  dateTime={"2020-06-10T00:00:00.000Z"}
  title="2020-06-10T00:00:00+00:00"
>
  in 9 days
</time>
`;

exports[`Storyshots Renderers/Date Renderer Relative Negative Is Null 1`] = `
<span>
   - 
</span>
`;

exports[`Storyshots Renderers/Date Renderer Time Since 1`] = `
<time
  dateTime={"2020-06-01T00:00:00.000Z"}
  title="2020-06-01T00:00:00+00:00"
>
  9 days ago
</time>
`;

exports[`Storyshots Renderers/Date Renderer Using Date String 1`] = `
<time
  dateTime={"2020-06-01T00:00:00.000Z"}
  title="2020-06-01T00:00:00+00:00"
>
  June 1, 2020
</time>
`;

exports[`Storyshots Renderers/Date Renderer Using Epoch 1`] = `
<time
  dateTime={"2020-06-01T00:00:00.000Z"}
  title="2020-06-01T00:00:00+00:00"
>
  June 1, 2020
</time>
`;

exports[`Storyshots Renderers/Date Renderer With Overrides 1`] = `
<time
  dateTime={"2020-06-01T00:00:00.000Z"}
  title="2020-06-01T00:00:00+00:00"
>
  06/01/2020
</time>
`;

exports[`Storyshots Renderers/Date Renderer With Overrides From Context 1`] = `
<time
  dateTime={"2020-06-01T00:00:00.000Z"}
  title="2020-06-01T00:00:00+00:00"
>
  Monday, June 1, 2020 12:00 AM
</time>
`;
